<resources>
    <string name="app_name">Sleep Cycle</string>
    <string name="what_is_sleep_cycle">Every night we go through four to six sleep cycles. Each cycle takes 70-110 minutes to complete (90 on average). On each cycles, we go through three stages of sleep. A lite stage, a medium stage and a deep stage. After we complete a full cycle of sleep, we can wake up with a fresh mind compared to a random sleep time.</string>
    <string name="stages_of_sleep">There are five stages of sleep during the sleep cycle. Scientists categorized the stages of sleep based on the characteristics of the brain and body during sleep. Stage 1,2,3, and 4, are categorized as ‘non-REM sleep’, and the fifth stage, is REM sleep.</string>
    <string name="stage_1_sleep">Stage 1 of the sleep cycle is the lightest stage of sleep. The EEG brain frequency is slightly slower than during wake time. There is muscle tone present in the skeletal muscles. Breathing occurs at a regular rate.</string>
    <string name="stage_2_sleep">Stage 2 usually follow Stage 1 and represents deeper sleep. During Stage 2 sleep, the sleeper is less able to be awakened. Stage 2 sleep is characterized by saw tooth waves and sleep spindles.</string>
    <string name="stage_3_4_sleep">Stage 3 and Stage 4 sleep of the sleep cycle are progressively deeper stages of sleep. These stages of sleep are also called ‘Slow Wave Sleep’ (SWS), or delta sleep. During SWS, the EEG shows a much slower frequency with high amplitude signals (delta waves). A sleeper in SWS is often difficult to awaken. Some studies have demonstrated that very loud noises, sometimes over 100 decibels, will not awaken some during SWS. As humans get older they spend less time in slow wave deep sleep and more time in Stage 2 sleep.</string>
    <string name="stage_5_sleep">Stage 5 of the sleep cycle, or REM sleep, is the stage of sleep associated with dreaming. It is very different physiologically from the other stages of sleep. The EEG resembles wake time. However, the skeletal muscles are atonic, or without movement. The breathing is more erratic and irregular. The heart rate often increases. It is theorized that muscle atonia evolved in order to protect the individual from injury during sleep.</string>
</resources>